<resources>
    <string name="app_name">pra_project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hi_welcome">Hi, welcome!</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="favorite">Favorite</string>
    <string name="product_name">Product name</string>
    <string name="product_price">product price</string>
    <string name="profile">Profile</string>
    <string name="nick_name">Nick Name</string>
    <string name="input_nick_name">Input Nick Name</string>
    <string name="full_name_profile">Full Name</string>
    <string name="input_full_name">Input Full Name</string>
    <string name="date_birth">Date Birth</string>
    <string name="input_date_birth">Input Date Birth</string>
    <string name="address">Address</string>
    <string name="input_address">Input Address</string>
    <string name="update">Update</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="detail_product">Product Detail</string>
    <string name="hp_bekas">Second Phone</string>
    <string name="handphone">Handphone</string>
    <string name="rp_2_000_0000">Rp.2.000.0000</string>
    <string name="news_update">News Update</string>
    <string name="products">Products</string>
    <string name="category_name">Category Name</string>
</resources>